@@ -21,7 +21,7 @@
 #include <stdio.h>
 #include <zend.h>
 
-static const char *zend_vm_opcodes_names[190] = {
+static const char *zend_vm_opcodes_names[191] = {
 	"ZEND_NOP",
 	"ZEND_ADD",
 	"ZEND_SUB",
@@ -212,9 +212,10 @@ static const char *zend_vm_opcodes_names[190] = {
 	"ZEND_SWITCH_LONG",
 	"ZEND_SWITCH_STRING",
 	"ZEND_IN_ARRAY",
+	"ZEND_COUNT",
 };
 
-static uint32_t zend_vm_opcodes_flags[190] = {
+static uint32_t zend_vm_opcodes_flags[191] = {
 	0x00000000,
 	0x00000707,
 	0x00000707,
@@ -405,6 +406,7 @@ static uint32_t zend_vm_opcodes_flags[190] = {
 	0x03000307,
 	0x03000307,
 	0x01000303,
+	0x00000103,
 };
 
 ZEND_API const char* zend_get_opcode_name(zend_uchar opcode) {
